# paw

./: .gitignore  README.md  output.md  pyproject.toml
examples/: main.py
paw/: __init__.py  constants.py  paw.py
